<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ProductDetail">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_barcode"
        android:hint="@string/barcode_value"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_description"
        android:hint="@string/description_value"
        android:layout_below="@+id/txt_barcode"
        android:layout_marginTop="3dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_brand"
        android:hint="@string/brand_value"
        android:layout_below="@id/txt_description"
        android:layout_marginTop="3dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_cost"
        android:hint="@string/cost_value"
        android:layout_below="@id/txt_brand"
        android:layout_marginTop="3dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_price"
        android:hint="@string/price_value"
        android:layout_below="@id/txt_cost"
        android:layout_marginTop="3dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_stock"
        android:hint="@string/stock_value"
        android:layout_below="@id/txt_price"
        android:layout_marginTop="3dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_update"
        android:text="@string/update_value"
        android:layout_below="@id/txt_stock"
        android:layout_marginTop="3dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_delete"
        android:text="@string/delete_value"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/txt_stock"/>
</RelativeLayout>